Refactoring and added test project

--- a/Src/GameQueryTest/GameQueryTest.csproj
+++ b/Src/GameQueryTest/GameQueryTest.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D113B45B-0993-439E-BA39-F68F1C1E66B2}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{82564527-0E99-4C0A-AE94-C8FE0F0649CA}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GameQueryNet</RootNamespace>
-    <AssemblyName>GameQueryNet</AssemblyName>
+    <RootNamespace>GameQueryTest</RootNamespace>
+    <AssemblyName>GameQueryTest</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,13 +31,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ICSharpCode.SharpZipLib">
-      <HintPath>packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,15 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Copy of GlobalOffivensiveQueryHandler.cs" />
-    <Compile Include="GlobalOffensiveStatsQueryRequest.cs" />
-    <Compile Include="GlobalOffensiveStatsQueryResponse.cs" />
-    <Compile Include="GlobalOffivensiveQueryHandler.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Console\GameQueryNet.csproj">
+      <Project>{D113B45B-0993-439E-BA39-F68F1C1E66B2}</Project>
+      <Name>GameQueryNet</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
