Added classes for packets and set up more code for handling multi packet response.

--- a/Src/GameQueryNet/GameQueryNet.csproj
+++ b/Src/GameQueryNet/GameQueryNet.csproj
@@ -53,6 +53,7 @@
     <Compile Include="GlobalOffensiveStatsQueryResponse.cs" />
     <Compile Include="GlobalOffivensiveQueryHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SteamPacket.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
