refactored, and made it buildable again.

--- a/Src/GameQueryNet/GameQueryNet.csproj
+++ b/Src/GameQueryNet/GameQueryNet.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ByteReader.cs" />
     <Compile Include="Copy of GlobalOffivensiveQueryHandler.cs" />
     <Compile Include="GlobalOffensiveStatsQueryRequest.cs" />
     <Compile Include="GlobalOffensiveStatsQueryResponse.cs" />
