Added stream Byte reader Jeeej

--- a/Src/GameQueryNet.Tests/GameQueryNet.Tests.csproj
+++ b/Src/GameQueryNet.Tests/GameQueryNet.Tests.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ByteReaderTests.cs" />
     <Compile Include="GlobalOffensiveTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
